# cipher-android

./: .gitignore  .last_installed  build.gradle.kts  detekt.yml  fix_inject.sh  fix_lint.py  fix_vance_core.sh  fix_vance_v3.sh  gradle.properties  gradlew  inspect_vance.sh  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NeuronAdapter.h  neuron_bridge.cpp  npu_loader.cpp  npu_test.cpp  tflite_stubs.h  vance_npu_engine.cpp  wake_npu_engine.cpp
app/src/main/cpp/tflite_headers/: NeuralNetworksSupportLibrary.h  c_api.h  c_api_experimental.h  common.h  nnapi_delegate_c_api.h
app/src/main/java/com/aetheria/cipher/: CipherApplication.kt  MainActivity.kt
app/src/main/java/com/aetheria/cipher/accessibility/: CipherAccessibilityService.kt
app/src/main/java/com/aetheria/cipher/actions/: ActionExecutor.kt  IntentHandler.kt  SmsHandler.kt  SystemSettingHandler.kt
app/src/main/java/com/aetheria/cipher/brain/: BrainRouter.kt  GroqClient.kt  LiteRTEngine.kt
app/src/main/java/com/aetheria/cipher/context/: ContextEngine.kt  MemoryStore.kt  RoutineEngine.kt
app/src/main/java/com/aetheria/cipher/core/: BootReceiver.kt  CipherCoreService.kt
app/src/main/java/com/aetheria/cipher/di/: AppModule.kt
app/src/main/java/com/aetheria/cipher/notifications/: CipherNotificationListener.kt
app/src/main/java/com/aetheria/cipher/shizuku/: CipherUserService.kt  ShizukuBridge.kt
app/src/main/java/com/aetheria/cipher/ui/: CipherChatActivity.kt  CipherSettingsActivity.kt  FloatingOrbService.kt  OnboardingActivity.kt
app/src/main/java/com/aetheria/cipher/ui/theme/: Theme.kt
app/src/main/java/com/aetheria/cipher/voice/: VoicePipeline.kt  WakeWordService.kt
app/src/main/java/com/aetheria/vance/: MainActivity.kt  VanceApplication.kt
app/src/main/java/com/aetheria/vance/accessibility/: VanceAccessibilityService.kt
app/src/main/java/com/aetheria/vance/actions/: ActionExecutor.kt  IntentHandler.kt  SmsHandler.kt  SystemSettingHandler.kt
app/src/main/java/com/aetheria/vance/brain/: BrainRouter.kt  FastLlmClient.kt  GroqClient.kt  LiteRTEngine.kt  LocalLlmClient.kt  LoraEvolutionManager.kt  MainLlmClient.kt  MemoryEmbedder.kt  MemoryFineTuner.kt  MemoryRetriever.kt  NeuronBridge.kt  NpuBridge.kt  NpuEngine.kt  PreferenceEngine.kt  SkillLearner.kt  SkillMatcher.kt  TfliteEngine.kt  TfliteLlmEngine.kt
app/src/main/java/com/aetheria/vance/context/: ContextEngine.kt  MemoryStore.kt  RoutineEngine.kt
app/src/main/java/com/aetheria/vance/core/: BootReceiver.kt  VanceCoreService.kt  VanceCoreStartWorker.kt
app/src/main/java/com/aetheria/vance/di/: AppModule.kt
app/src/main/java/com/aetheria/vance/notifications/: VanceNotificationListener.kt
app/src/main/java/com/aetheria/vance/npu/: NpuEngine.kt  VanceNpuJni.kt
app/src/main/java/com/aetheria/vance/shizuku/: ShizukuBridge.kt  VanceUserService.kt
app/src/main/java/com/aetheria/vance/ui/: FloatingOrbService.kt  OnboardingActivity.kt  VanceChatActivity.kt  VanceSettingsActivity.kt
app/src/main/java/com/aetheria/vance/ui/theme/: Theme.kt
app/src/main/java/com/aetheria/vance/voice/: VoicePipeline.kt  WakeWordService.kt
app/src/main/java/com/aetheria/vance/wake/: WakeNPUEngine.kt
app/src/main/res/drawable/: cipher_orb.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
cipher-android/app/src/main/cpp/: neuron_bridge.cpp
docs/: QWEN3_WAKE_WORD_SELF_LEARNING.md  Vance_Complete_Architecture.md  Vance_Master_Implementation_Prompt.md
scripts/: download_models.sh
